Prevent zooming and align right chat window on phones

--- a/web/less/chat.less
+++ b/web/less/chat.less
@@ -3,6 +3,9 @@
   width: 300px;
   height: 60%;
   right: 60px;
+  @media @smartphones {
+    right: 0px;
+  }
   /* Screen padding (15) + padding among streams (4) */
   bottom: calc(~"-60% + 19px");
   background-color: white;
